--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    padding: 0;
+    padding: 0 0;
     margin: 0;
     box-sizing: border-box;
   }
@@ -12,6 +12,14 @@
     padding-bottom: 40px;
     font-family: 'Montserrat', sans-serif;
   }
+
+  a {
+    text-decoration: none;
+  }
+
+  .container {
+    max-width: 500px;
+  }
   
   .wrapper {
     background: #fff;
@@ -23,13 +31,13 @@
   
   .asidebar {
     background: #1e2939;
-    width: 370px;
+    max-width: 370px;
     padding-top: 40px;
     padding-bottom: 40px;
   }
   
   .my_photo {
-    width: 370px;
+    max-width: 370px;
   }
   .about_me_container {
     padding-left: 80px;
@@ -116,7 +124,7 @@
     font-weight: 400;
     line-height: 24px;
     text-align: justify;
-    width: 100%;
+    max-width: 100%;
     max-width: 413px;
     padding-top: 20px;
   }
@@ -127,8 +135,16 @@
     line-height: 24px;
     color: #000;
     margin-top: 64px;
-  }
+    margin-bottom: 10px;
   
+  }
+
+.projects_type {
+  color: #f5680a;
+  font-weight: 700;
+  margin-top: 10px;
+}
+
   .numbers {
     font-size: 14px;
     font-weight: 700;
@@ -137,7 +153,7 @@
     padding-top: 10px;
   }
   
-  .link_project {
+  .project__link {
     font-size: 14px;
     font-weight: 400;
     line-height: 24px;
@@ -191,4 +207,53 @@
   
   .dots {
     font-weight: 100;
+  }
+
+  .numbers a {
+    color: #000;
+    transition: all .3s;
+  }
+
+  .numbers a:hover, .dots a:hover {
+    text-decoration: underline;
+    color: #621099;
+    font-weight: 700;
+  }
+
+  .certifications {
+    margin-bottom: 10px;
+    font-weight: 700;
+    color: #f5680a;
+  }
+
+  .certifications__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .certifications__item img {
+    max-width: 200px;
+
+  }
+
+  .certifications__item-2 img {
+    max-width: 250px;
+  }
+
+  .dots {
+    padding-left: 50px;
+  }
+
+  .data {
+    margin-top: 5px;
+    margin-bottom: 30px;
+
+  }
+  .certifications__link {
+    font-weight: 700;
+    margin-bottom: 20px;
+  }
+
+  .certifications__link p {
+    font-weight: 400;
   }
